--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
+    <string name="welcome">Welcome to Stamp App!</string>
 
 
     <string name="camera_permission_title">Please allow camera access!</string>
@@ -15,4 +16,9 @@
     <string name="camera_no_permission">It\'s impossible to use camera without a permission</string>
     <string name="storage_no_permission">It\'s impossible to access storage without a permission</string>
     <string name="request_error">Request error</string>
+    <string name="take_photo">Take a photo or pick it from the gallery</string>
+    <string name="float_button_error">There is no image to send. Please pick the image</string>
+
+    <string name="id_chosen">Сhosen id was sent to backend</string>
+    <string name="stamp_photo_error">No results for this stamp</string>
 </resources>
